 - fixed bug in creation of block (heyula/goffy)
 - improved breadcrumb handling (goffy)
 - replaced index.html by index.php (goffy)
 - added replacement of tabs by 4 spaces in devtools (goffy)
 - fixed bug with unnecessary index.php files adex by index_scan (mjoel/goffy)
 - fixed bug if no permissions are used (goffy)
 - added default value for date/time form field (goffy)

<h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- moved to final (goffy)

<h5>3.04 RC 1   [2020-07-09]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- unqualified function references (mamba/goffy)
- cosmetics (goffy)
- deleted folder archive (goffy)
- added uuid and IP textbox field (mamba/goffy)
- fixed problem with missing empy.png (cesagonchu/goffy)
- fixed bug with mb_strtolower for dir creation (cesagonchu/goffy)
- fixed problems with missing tables and fields (cesagonchu/goffy)
- added developer tool function qualifier (goffy)
- added developer tool check language files (goffy)
- fixed problems with breadcrumb template (cesagonchu/goffy)
- added default type and value for table fieldelements (goffy)
- fixed bug in deleting table from fieldelements (goffy)
- added check for sql creation (goffy)
- delete fields if table is deleted (goffy)
- delete fields, tables, morefiles when deleting module (goffy)
- fixed bug in creation of user header.php (goffy)
- fixed bug in creation of user pages files (goffy)
- cosmetics for sorting (goffy)
- fixed bugs in pdf creation (goffy)
- allow pdf creation for multiple tables (goffy)
- changed pdf output template based (goffy)
- fixed bugs in print output (goffy)
- fixed problem for modules without user pages (goffy)

<h5>3.04 Alpha 1   [2020-06-12]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- fixed bugs in creation of more files (goffy)
- added possibility to add own files via more files (goffy)
- implementation new xoops_confirm (geekwright/goffy)
- fixed bug in creation of config files (goffy)