@@ -535,7 +535,8 @@ class ClassFormElements extends Modulebuilder\Files\CreateAbstractClass
         $ccFieldName     = $this->cf->getCamelCase($fieldName, false, true);
         $t               = "\t\t";
         $ret             = $this->pc->getPhpCodeCommentLine('Form Select', 'User ' . $ccFieldName, $t);
-        $xoopsSelectUser = $this->cxc->getClassXoopsFormSelectUser('', $language, $fieldName, 'false', $fieldName, true, $t);
+        $ret             .= $this->pc->getPhpCodeTernaryOperator($ccFieldName, '$this->isNew()', '$GLOBALS[\'xoopsUser\']->uid()', "\$this->getVar('{$fieldName}')", $t);
+        $xoopsSelectUser = $this->cxc->getClassXoopsFormSelectUser('', $language, $fieldName, 'false', $fieldName, '$' . $ccFieldName, true, $t);
         $ret             .= $this->cxc->getClassAddElement('form', $xoopsSelectUser . $required, $t);
 
         return $ret;
@@ -576,7 +577,7 @@ class ClassFormElements extends Modulebuilder\Files\CreateAbstractClass
         $t                   = "\t\t";
         $ccFieldName         = $this->cf->getCamelCase($fieldName, false, true);
         $ret                 = $this->pc->getPhpCodeCommentLine('Form Text', 'Date Select ' . $ccFieldName, $t);
-        $ret                 .= $this->pc->getPhpCodeTernaryOperator($ccFieldName, '$this->isNew()', 0, "\$this->getVar('{$fieldName}')", $t);
+        $ret                 .= $this->pc->getPhpCodeTernaryOperator($ccFieldName, '$this->isNew()', 'time()', "\$this->getVar('{$fieldName}')", $t);
         $xoopsTextDateSelect = $this->cxc->getClassXoopsFormTextDateSelect('', $language, $fieldName, $fieldName, $ccFieldName, true, $t);
         $ret                 .= $this->cxc->getClassAddElement('form', $xoopsTextDateSelect . $required, $t);
 
