@@ -145,11 +145,18 @@ class CreateSmartyCode
      * @param string $var
      * @param string $t
      * @param string $n
+     * @param string $default
      * @return string
      */
-    public function getSmartySingleVar($var, $t = '', $n = "")
+    public function getSmartySingleVar($var, $t = '', $n = "", $default = 'false')
     {
-        return "{$t}<{\${$var}}>{$n}";
+        $ret = "{$t}<{\${$var}";
+        if ('' !== $default) {
+            $ret .= '|default:' . $default;
+        }
+        $ret .= "}>{$n}";
+
+        return $ret;
     }
 
     /**
